# Hippomem

./: .gitignore  CLAUDE_SKILL.md  GEMINI.md  Makefile  pyproject.toml  requirements.txt
.claude/: settings.json
.claude-plugin/: plugin.json
.codex/: settings.json
hooks/: memlayer_hook.py
memlayer/: cli.py  db.py  mcp_server.py  models.py
memlayer/core/: docker_manager.py  governance.py  graph.py  ingestion.py  retrieval.py
skills/memlayer/: SKILL.md
tests/: test_docker_manager.py  test_governance.py  test_graph_accelerator.py  test_ingestion.py  test_integration.py  test_m3.py  test_m4.py  test_retrieval.py
